--- a/.github/workflows/publish-deployment.yaml
+++ b/.github/workflows/publish-deployment.yaml
@@ -50,7 +50,7 @@ jobs:
         - name: scp into GCP instance
           uses: appleboy/scp-action@master
           with:
-            host: ${{ secrets.   }}
+            host: ${{ secrets.GCE_INSTANCE_IP_STAGING }}
             username: ${{ secrets.GCE_SSH_USERNAME }}
             key: ${{ secrets.GCE_SSH_PRIVATE_KEY }}
             source: "docker-compose.yml"
