--- a/.github/workflows/publish-deployment.yaml
+++ b/.github/workflows/publish-deployment.yaml
@@ -14,8 +14,8 @@ jobs:
         - name: Login to Docker Hub
           uses: docker/login-action@v1
           with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_PASSWORD }}
         - name: Build djangoApi and publish to Docker Hub
           uses: docker/build-push-action@v2
           with:
