--- a/.github/workflows/publish-deployment.yaml
+++ b/.github/workflows/publish-deployment.yaml
@@ -63,8 +63,8 @@ jobs:
             username: ${{ secrets.GCE_SSH_USERNAME }}
             key: ${{ secrets.GCE_SSH_PRIVATE_KEY }}
             script: |
-              docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yml --profile staging down
-              docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yml --profile staging build --pull
-              docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yml --profile staging up -d
+              sudo docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yaml --profile staging down
+              sudo docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yaml --profile staging build --pull
+              sudo docker compose -f /home/${{ secrets.GCE_SSH_USERNAME }}/docker-compose.yaml --profile staging up -d
 
-              docker image prune -f
+              sudo docker image prune -f
