--- a/.github/workflows/publish-deployment.yaml
+++ b/.github/workflows/publish-deployment.yaml
@@ -3,7 +3,7 @@ name: Deploy CasaFerretera to GCP with Docker - staging
 on:
   push:
     branches:
-      - main
+      - development
 
 jobs:
     build-and-publish:
