--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,10 @@
 fastapi==0.110.0
 pydantic==2.6.4
 httpx==0.27.0
-libsql-experimental==0.0.34
 uvicorn==0.29.0
 python-dotenv==1.0.1
 SQLAlchemy==2.0.29
 pytest==8.1.1
 pytest-asyncio==0.23.6
+python-jose==3.3.0
+passlib==1.7.4
