--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "test": "vitest --ui"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "jsdom": "^24.0.0",
     "react": "^18.2.0",
