(Fix): Modified auth routes and auth services

--- a/.gitignore
+++ b/.gitignore
@@ -285,6 +285,7 @@ dist
 .tern-port
 
 # Stores VSCode versions used for testing VSCode extensions
+.vscode/
 .vscode-test
 
 # yarn v2
@@ -306,3 +307,4 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/node
 
 .dockerignore
+
