--- a/.gitignore
+++ b/.gitignore
@@ -120,9 +120,8 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.env
 .venv
-env/
+env
 venv/
 ENV/
 env.bak/
@@ -239,7 +238,7 @@ web_modules/
 .yarn-integrity
 
 # dotenv environment variable files
-.env
+
 .env.development.local
 .env.test.local
 .env.production.local
