--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 BACK_URL_DEV=http://127.0.0.1:8000  
 BACK_URL_PROD= #Agregar URL de producción
-VITE_BASE_URL=http://35.202.223.183:8081
+VITE_BASE_URL=https://backendc.casaferretera.teleafit.tech/
