(Fix): Fix / in VITE_BASE_URL variable

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 BACK_URL_DEV=http://127.0.0.1:8000  
 BACK_URL_PROD= #Agregar URL de producción
-VITE_BASE_URL=https://backendc.casaferretera.teleafit.tech/
+VITE_BASE_URL=https://backendc.casaferretera.teleafit.tech
